# cargo-rebuild

./: Cargo.toml  README.md
src/: main.rs
