[package]
name = "cargo-rebuild"
version = "0.1.0"
authors = ["Jonathan Samson <jonathansamsonvcu@gmail.com>"]
edition = "2018"
repository = "https://github.com/samsonjj/cargo-rebuild"
description = "A cargo subcommand to clean the project, then build it"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
